Flowchart is of size 0.4. Consequently, some lines may be added.

--- a/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauercameraready2pages.tex
+++ b/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauercameraready2pages.tex
@@ -70,8 +70,8 @@ As \cite{BibGECCO:2010} demonstrates parameters tuned for one instance may not b
 
 \begin{figure}[h!]
   \centering
-    \includegraphics[width=0.5\textwidth]{lao.png}
-  \caption{Flowchart of the Lao framework, displaying only 4 instances.}
+    \includegraphics[width=0.4\textwidth]{lao.png}
+  \caption{Flowchart of the LaO framework, displaying only 4 instances.}
 \label{figure:laoflowchart}
 \end{figure}
 
