--- a/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauercameraready2pages.tex
+++ b/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauercameraready2pages.tex
@@ -9,6 +9,12 @@
 \usepackage{color}
 \usepackage{subfig}
 
+\conferenceinfo{GECCO'11,} {July 12--16, 2011, Dublin, Ireland.}
+\CopyrightYear{2011}
+\crdata{978-1-4503-0690-4/11/07}
+\clubpenalty=10000
+\widowpenalty = 10000
+
 \DeclareCaptionType{copyrightbox}
 
 \def\BibTeX{Bib\TeX}
