for submission this is needed

--- a/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauercameraready2pages.tex
+++ b/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauercameraready2pages.tex
@@ -1,4 +1,4 @@
-\documentclass{MYsig-alternate}
+\documentclass{sig-alt-release2}
 %  \documentclass{acm_proc_article-sp}
 \usepackage{algorithm}
 \usepackage{url}
