--- a/papers/AE2011/ae2011.tex
+++ b/papers/AE2011/ae2011.tex
@@ -17,18 +17,19 @@
 \title{Instance-Based Parameter Tuning\\
 for Evolutionary AI Planning}
 
+\author{ M{\'a}ty{\'a}s Brendel \inst{1} \and Marc Schoenauer \inst{2}}
+\authorrunning{M. Brendel \and M. Schoenauer}
 
- %\numberofauthors{2}
- 
- %\author{
- %\alignauthor
- %M{\'a}ty{\'a}s Brendel\\
  %       \affaddr{Projet TAO, INRIA Saclay \& LRI}\\
  %       \affaddr{Universit{\'e} Paris Sud}\\
  %       \affaddr{Orsay, France}\\
  %       \email{matthias.brendel@lri.fr}
  %\alignauthor
- %Marc Schoenauer\\
+
+\institute{Projet TAO, INRIA Saclay \& LRI \\ 
+\email{matthias.brendel@lri.fr}  \and Projet TAO, INRIA Saclay \& LRI \\ \email{marc.schoenauer@inria.fr}}
+
+
  %       \affaddr{Projet TAO, INRIA Saclay \& LRI}\\
  %       \affaddr{Universit{\'e} Paris Sud}\\
  %       \affaddr{Orsay, France}\\
@@ -38,7 +39,7 @@ for Evolutionary AI Planning}
 \date{February 9, 2011}
 \maketitle
 \begin{abstract}
-\noindent Learn-and-Optimize ~(LaO) ~is ~a ~generic ~surrogate ~based method for parameter tuning combining learning and optimization. In this paper LaO is used to tune Divide-and-Evolve (DaE), an Evolutionary Algorithm for AI Planning. The LaO framework makes it possible to learn the relation between some features describing a given instance and the optimal parameters for this instance, thus it enables to extrapolate this relation to unknown instances in the same domain. Moreover, the learned model is used as a surrogate-model to accelerate the search for the optimal parameters. It hence becomes possible to solve intra-domain and extra-domain generalization in a single framework. The proposed implementation of LaO uses an Artificial Neural Network for learning the mapping between features and optimal parameters, and the Covariance Matrix Adaptation Evolution Strategy for optimization. Results demonstrate that LaO is capable of improving the quality of the DaE results even with only a few iterations. The main limitation of the DaE case-study is the limited amount of meaningful features that are available to describe the instances. However, the learned model reaches almost the same performance on the test instances, which means that it is capable of generalization. 
+Learn-and-Optimize ~(LaO) ~is ~a ~generic ~surrogate ~based method for parameter tuning combining learning and optimization. In this paper LaO is used to tune Divide-and-Evolve (DaE), an Evolutionary Algorithm for AI Planning. The LaO framework makes it possible to learn the relation between some features describing a given instance and the optimal parameters for this instance, thus it enables to extrapolate this relation to unknown instances in the same domain. Moreover, the learned model is used as a surrogate-model to accelerate the search for the optimal parameters. It hence becomes possible to solve intra-domain and extra-domain generalization in a single framework. The proposed implementation of LaO uses an Artificial Neural Network for learning the mapping between features and optimal parameters, and the Covariance Matrix Adaptation Evolution Strategy for optimization. Results demonstrate that LaO is capable of improving the quality of the DaE results even with only a few iterations. The main limitation of the DaE case-study is the limited amount of meaningful features that are available to describe the instances. However, the learned model reaches almost the same performance on the test instances, which means that it is capable of generalization. 
 
 \end{abstract}
 
@@ -156,6 +157,7 @@ Name & iterations  & instances &  instances &  error & in LaO & ANN on train & A
 Freecell& 16 & 108 & 230 & 0.1 & 1.09 & 1.05 & 1.04  \\
 Grid & 10 & 55 & 124 & 0.09 & 1.09 & 1.05 & 1.03  \\
 Mprime & 8 & 64 & 152 & 0.08 & 1.11 & 1.05 & 1.04   \\
+Parking & 11 & 101 & 129 & 0.12 &  1.49 & ?  & 1.14   \\
 \hline
 \end{tabular}
 \caption{Results by domains (only the actually usable training instances are shown). ANN-error is given as MSE, as returned by FANN. The quality-improvement ratio in Lao is that of the best parameter-set found by LaO.}
@@ -180,10 +182,10 @@ Time interval radius& 0& 10& 2 \\
 Maximum number of stations& 5& 50& 20 \\
 Maximum number of nodes& 100& 100 000& 10 000 \\
 Population size& 10& 300& 100 \\
-Number of offspring & 100& 2 000& 700 \\
+Number of offsprings & 100& 2 000& 700 \\
 \hline
 \end{tabular}
-\caption{DaE parameters that are controlled by LaO}
+\caption{DaE parameters that are controlled by LaO. Values are changed for domain Parking, see explanation in text.}
 \label{table:parameters}
 \end{table*} 
 
@@ -201,6 +203,8 @@ Moreover, since DaE is not deterministic, 11 independent runs were carried out f
 \label{section:results}
 
 In the Planning and Learning Part of IPC2011 (IPC), 5 sample domains were pre-published, with a corresponding problem-generator for each domain: Ferry, Freecell, Grid, Mprime, and Sokoban. Ferry and Sokoban were excluded from this study since there were not enough number of instances to learn any mapping. For each of the remaining 3 domains, 100 instances were generated, since this seemed to be appropriate for a running time of approximately 2-3 weeks: The competition track description fixes running time as 15 minutes. For each instance, 11 independent trials were run on a dedicated server to measure the median of number of evaluations with the default parameters. The termination criterion was the number of YAHSP evaluations. The median of those 11 runs was used as a termination criterion for each instance in the train set on any computer. However, many instances were never solved within 15 minutes, and those instances were dropped from the rest of experiment. The remaining instances were used for training.
+
+The real domains were releasd later in the same track of IPC. These domains were much harder, meaning that most of the official train instances could not be solved by DaE in 15 minutes at all. Therefore the published instance-generator was used, with a different range of the parameters. Moreover, several other issues had to be solved and the generator-parameters had to be changed slightly. The generator-parameter number\_of\_curbs was running from 6 to 56 with step 5, and generator-parameter the number\_of\_cars from 6 to 31 with step 1. This means a total number of 250 instances. Out of these 230 was solvable and 101 randomly selected were used for train and the remaining 129 for test. However, even generating easyer instances would not solve the issue itself: we had to change the default parameters as Population size=1 and Number of offsprings=1. Only this way could we solve so many instances and get some values for number of evaluations. The range of the parameters was also changed: the lower range of Maximum number of stations, Maximum number of nodes, Population size, and Number of offsprings was set to one.
 
 
  \begin{table}[tb!]
