--- a/papers/AE2011/ae2011.tex
+++ b/papers/AE2011/ae2011.tex
@@ -204,7 +204,7 @@ Moreover, since DaE is not deterministic, 11 independent runs were carried out f
 
 In the Planning and Learning Part of IPC2011 (IPC), 5 sample domains were pre-published, with a corresponding problem-generator for each domain: Ferry, Freecell, Grid, Mprime, and Sokoban. Ferry and Sokoban were excluded from this study since there were not enough number of instances to learn any mapping. For each of the remaining 3 domains, 100 instances were generated, since this seemed to be appropriate for a running time of approximately 2-3 weeks: The competition track description fixes running time as 15 minutes. For each instance, 11 independent trials were run on a dedicated server to measure the median of number of evaluations with the default parameters. The termination criterion was the number of YAHSP evaluations. The median of those 11 runs was used as a termination criterion for each instance in the train set on any computer. However, many instances were never solved within 15 minutes, and those instances were dropped from the rest of experiment. The remaining instances were used for training.
 
-The real domains were releasd later in the same track of IPC. These domains were much harder, meaning that most of the official train instances could not be solved by DaE in 15 minutes at all. Therefore the published instance-generator was used, with a different range of the parameters. Moreover, several other issues had to be solved and the generator-parameters had to be changed slightly. The generator-parameter number\_of\_curbs was running from 6 to 56 with step 5, and generator-parameter the number\_of\_cars from 6 to 31 with step 1. This means a total number of 250 instances. Out of these 230 was solvable and 101 randomly selected were used for train and the remaining 129 for test. However, even generating easyer instances would not solve the issue itself: we had to change the default parameters as Population size=1 and Number of offsprings=1. Only this way could we solve so many instances and get some values for number of evaluations. The range of the parameters was also changed: the lower range of Maximum number of stations, Maximum number of nodes, Population size, and Number of offsprings was set to one.
+The real domains were released later in the same track of IPC. These domains were much harder, meaning that most of the official train instances could not be solved by DaE in 15 minutes at all. Therefore the published instance-generator was used, with a different range of the parameters. Moreover, several other issues had to be solved and the generator-parameters had to be changed slightly. The generator-parameter number\_of\_curbs was running from 6 to 56 with step 5, and generator-parameter the number\_of\_cars from 6 to 31 with step 1. This means a total number of 250 instances. Out of these 230 was solvable and 101 randomly selected were used for train and the remaining 129 for test. However, even generating easier instances would not solve the issue itself: we had to change the default parameters as Population size=1 and Number of offsprings=1. Only this way could we solve so many instances and get some values for number of evaluations. The range of the parameters was also changed: the lower range of Maximum number of stations, Maximum number of nodes, Population size, and Number of offsprings was set to one.
 
 
  \begin{table}[tb!]
