--- a/papers/AE2011/ae2011.tex
+++ b/papers/AE2011/ae2011.tex
@@ -204,7 +204,7 @@ Moreover, since DaE is not deterministic, 11 independent runs were carried out f
 
 In the Planning and Learning Part of IPC2011 (IPC), 5 sample domains were pre-published, with a corresponding problem-generator for each domain: Ferry, Freecell, Grid, Mprime, and Sokoban. Ferry and Sokoban were excluded from this study since there were not enough number of instances to learn any mapping. For each of the remaining 3 domains, 100 instances were generated, since this seemed to be appropriate for a running time of approximately 2-3 weeks: The competition track description fixes running time as 15 minutes. For each instance, 11 independent trials were run on a dedicated server to measure the median of number of evaluations with the default parameters. The termination criterion was the number of YAHSP evaluations. The median of those 11 runs was used as a termination criterion for each instance in the train set on any computer. However, many instances were never solved within 15 minutes, and those instances were dropped from the rest of experiment. The remaining instances were used for training.
 
-The real domains were released later in the same track of IPC. These domains were much harder, meaning that most of the official train instances could not be solved by DaE in 15 minutes at all. Therefore the published instance-generator was used, with a different range of the parameters. Moreover, several other issues had to be solved and the generator-parameters had to be changed slightly. The generator-parameter number\_of\_curbs was running from 6 to 56 with step 5, and generator-parameter the number\_of\_cars from 6 to 31 with step 1. This means a total number of 250 instances. Out of these 230 was solvable and 101 randomly selected were used for train and the remaining 129 for test. However, even generating easier instances would not solve the issue itself: we had to change the default parameters as Population size=1 and Number of offsprings=1. Only this way could we solve so many instances and get some values for number of evaluations. The range of the parameters was also changed: the lower range of Maximum number of stations, Maximum number of nodes, Population size, and Number of offsprings was set to one.
+The real domains were released later in the same track of IPC. These domains were much harder, meaning that most of the official train instances could not be solved by DaE in 15 minutes at all. Therefore the published instance-generator was used, with a different range of generator-parameters. The generator-parameter number\_of\_curbs was running from 6 to 56 with step 5, and generator-parameter the number\_of\_cars from 6 to 31 with step 1. This means a total number of 250 instances. Out of these 230 was solvable and 101 randomly selected were used for train and the remaining 129 for test. However, even generating easier instances would not solve the issue itself: we had to change the default parameters as Population size=1 and Number of offsprings=1. Only this way could we solve so many instances and get some values for number of evaluations. The range of the parameters was also changed: the lower range of Maximum number of stations, Maximum number of nodes, Population size, and Number of offsprings was set to one.
 
 
  \begin{table}[tb!]
@@ -218,7 +218,7 @@ Grid & ~2 -- 24 & 66 -- ~60  & 16 -- 11 & 17 -- ~5  &    \\
 Mprime &  ~2 -- 45& 59 -- 36 & ~2 -- 11  & 18 -- ~8  &    \\
 \hline
 \end{tabular}
-\caption{For each method (default, CMA-ES, Genetransferer or ANN), the percentage of instances on which this method gave the best parameter set. Each cell shows 2 figures: the first one considers all occurences of a method, no matter if another method also lead an equivalent parameter set, as good as the first one. The second figures only considers the first method (from left to right) that discovered the best parameter-set.}
+\caption{For each method (default, CMA-ES, Genetransferer or ANN), the percentage of instances on which this method gave the best parameter set. Each cell shows 2 figures: the first one considers all occurrences of a method, no matter if another method also lead an equivalent parameter set, as good as the first one. The second figures only considers the first method (from left to right) that discovered the best parameter-set.}
 \label{table:hints}
 \end{table} 
 
@@ -251,10 +251,6 @@ The results are quite similar for all domain. Even the size of the training set 
 \label{section:futurework}	
 
 The LaO method presented in this paper is a surrogate-model based combined learner and optimizer for parameter tuning. LaO was demonstrated to be capable of improving the quality of the DaE algorithm consistently, even though it was run only for a few iterations. On-going work is concerned with running LaO for an appropriate number of iterations. A clearly visible result is also that some of this quality-improvement can be incorporated into an ANN-model, which is also able to generalize excellently to an independent test-set.
-
-
-Of course, LaO also has its own parameters, which should be tuned, too. Parameter tuning is in this respect similar to the question of the final parameters of an ultimate theory of the Universe: one can always try to reduce one theory to another one that possibly has less parameters. But such infinite regress can not be stopped: there will always be some ultimate parameters to be tuned. On the opposite, the parameters of any algorithm can be tuned by another algorithm and that may improve the results. However, there is no ultimate algorithm. The bad news here is that the computing capacity needed is exploding. The good news is that in each step in the hierarchy an improvement can be made. Nevertheless, the possible improvements become smaller and smaller.
-
 
 The most important experiment to carry out in the future is simply to test the algorithm with more iterations and on more domains -- and this will take several months of CPU even using a large cluster. Since LaO is only a framework, as indicated other kind of learning methods, and other kind of optimization techniques may be incorporated. If an ANN is used, the optimal structure has to be determined, or a more sophisticated solution is to apply one of the so-called Growing Neural Network architectures.
 
